[package]
name = "challenge-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.71"
